welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: Missing closing brace `}' assumed here
def array667(nums:Array[Int]): Int = {
^